# TIN-Locus

./: .gitmodules  BlockingMessageQueue.cpp  BlockingMessageQueue.h  ClientManager.cpp  ClientManager.h  README.md  SessionManager.cpp  SessionManager.h  SocketEndpoint.cpp  SocketEndpoint.h  client.cpp  makefile  server.cpp  signal_handlers.h  todo.txt
android/app/: build.gradle
android/app/src/androidTest/java/com/volterra/tin/petarda/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/volterra/tin/petarda/: ConfigActivity.java  ListActivity.java  MainActivity.java  PollThread.java  SendThread.java  ThreadConnector.java  TransferThread.java  UserAdapter.java
android/app/src/main/res/layout/: activity_config.xml  activity_main.xml  recycler_view_row.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/volterra/tin/petarda/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
client/: pom.xml
client/key/: private_key  public_key
client/src/main/java/com/github/koraxiss/: App.java  CipherModule.java  Client.java  Converter.java  EncryptedMessenger.java  LayerManager.java  Message.java  Messenger.java  Packet.java  PacketType.java  ProtocolMessenger.java  SimpleMessenger.java
client/src/test/java/com/github/koraxiss/: AppTest.java  CipherModuleTest.java
client/tin-project/: pom.xml
client/tin-project/src/main/java/com/github/koraxiss/: App.java
server/: CMakeLists.txt  README.md  changelog.txt  confugure.sh  makefile  todo.txt
server/src/: BlockingMessageQueue.cpp  ClientManager.cpp  ClientManager.h  SocketEndpoint.cpp  SocketEndpoint.h  main.cpp  server.cpp  test_client.cpp
server/src/basedata/: CMakeLists.txt  ClientDataManager.cpp  ClientDataManager.h  ClientInfo.cpp  ClientInfo.h  Watcher.cpp  Watcher.h
server/src/basedata/test/: CMakeLists.txt  ClientDataManager_test.cpp  Watcher_test.cpp
server/src/buffer/: BlockBuffer.cpp  BlockBuffer.h  BlockingBuffer.cpp  BlockingBuffer.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Converter.h  PipeBuffer.cpp  PipeBuffer.h  RandomStringGenerator.cpp  RandomStringGenerator.h
server/src/buffer/test/: BlockingBuffer_test.cpp  Buffer_test.cpp  CMakeLists.txt  Converter_test.cpp
server/src/client/: CMakeLists.txt  Client.cpp  Client.h  ClientBuffer.cpp  ClientBuffer.h  DecoratorClient.cpp  DecoratorClient.h  EncryptClient.cpp  EncryptClient.h  ProtocolClient.cpp  ProtocolClient.h  SimpleClient.cpp  SimpleClient.h  signal_handlers.cpp  test_client.cpp
server/src/crypto/: CMakeLists.txt  Crypto.cpp  Crypto.h  CryptoModule.cpp  CryptoModule.h  Makefile  genServerKeys.cpp  instruction.txt  keysGenerator.cpp  keysGenerator.h  rsa-private.key  rsa-public.key  testProgram.cpp
server/src/crypto/test/: CMakeLists.txt  CryptoModule_test.cpp  Crypto_test.cpp
server/src/database/: CMakeLists.txt  ClientData.cpp  ClientData.h  ClientDataManager.cpp  ClientDataManager.h  ClientInfo.cpp  ClientInfo.h  Database.cpp  Database.h  Position.cpp  Position.h  Watcher.cpp  Watcher.h
server/src/database/test/: CMakeLists.txt  ClientDataManager_test.cpp  ClientInfo_test.cpp  Position_test.cpp  Watcher_test.cpp
server/src/epoll/: CMakeLists.txt  EPollEvent.cpp  EPollEvent.h  EPollManager.cpp  EPollManager.h
server/src/log/: CMakeLists.txt  Colour.cpp  Colour.h  Logger.cpp  Logger.h
server/src/message/: BlockingQueue.h  CMakeLists.txt  ErrorType.h  Message.cpp  Message.h
server/src/message/test/: BlockingQueue_test.cpp  CMakeLists.txt  Message_test.cpp
server/src/messenger/: CMakeLists.txt  EncryptMessenger.cpp  EncryptMessenger.h  Messenger.cpp  Messenger.h  ProrocolMessenger.cpp  ProrocolMessenger.h  ProtocolMessenger.cpp  ProtocolMessenger.h  SimpleMessenger.cpp  SimpleMessenger.h
server/src/messenger/test/: CMakeLists.txt  EncryptMessenger_test.cpp  ProrocolMessenger_test.cpp  ProtocolMessenger_test.cpp  SimpleMessenger_test.cpp
server/src/packet/: BlockBuffer.cpp  BlockBuffer.h  CMakeLists.txt  Converter.h  Packet.cpp  Packet.h  PacketType.cpp  PacketType.h
server/src/packet/test/: BlockBuffer_test.cpp  CMakeLists.txt  Converter_test.cpp  PacketType_test.cpp  Packet_test.cpp
server/src/receiver/: Acceptor.cpp  Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h  CMakeLists.txt  ClientBuffer.cpp  ClientBuffer.h  ConnectionManager.cpp  ConnectionManager.h  EPollEvent.cpp  EPollEvent.h
server/src/receiver/test/: Accepter_test.cpp  CMakeLists.txt  Receiver_test.cpp
server/src/server/: Acceptor.cpp  Acceptor.h  BasicThread.cpp  BasicThread.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Client.cpp  Client.h  ClientBuffer.cpp  ClientBuffer.h  ClientManager.cpp  ClientManager.h  EPollEvent.cpp  EPollEvent.h  EPollManager.cpp  EPollManager.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  Server.cpp  Server.h
server/src/server/test/: Buffer_test.cpp  CMakeLists.txt
server/src/simple-client/: CMakeLists.txt  signal_handlers.h  test_client.cpp
src/log/: Colour.cpp  Logger.cpp  Logger.h
